<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/re_setting_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_view_bg"
        android:clickable="true"
        android:paddingLeft="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:text="@string/setting_about"
            android:textColor="#353535"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/right_arrow"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_setting_help"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_view_bg"
        android:clickable="true"
        android:paddingLeft="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_help"
            android:textColor="#353535"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_setting_logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_view_bg"
        android:gravity="center"
        android:text="@string/setting_logout"
        android:textColor="#353535"
        android:textSize="16sp" />

</LinearLayout>