<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/re_profile_myinfo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_view_bg"
        android:clickable="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_profile_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="15dp"
            fresco:placeholderImage="@mipmap/avatar_default" />

        <LinearLayout
            android:id="@+id/ll_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/iv_profile_avatar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                android:textColor="#353535"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_profile_sex"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"

                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_profile_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_profile_avatar"
            android:text="@string/signature"
            android:textColor="#AAAAAA"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/right_arrow"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_profile_netdisk"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/item_view_bg"
        android:clickable="true"
        android:paddingLeft="12dp">

        <ImageView
            android:id="@+id/iv_profile_netdisk"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_netdisk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_profile_netdisk"
            android:text="@string/profile_netdisk"
            android:textColor="#353535"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/right_arrow"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_profile_app"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/item_view_bg"
        android:clickable="true"
        android:paddingLeft="12dp">

        <ImageView
            android:id="@+id/iv_profile_app"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_app" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/right_arrow"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_profile_app"
            android:text="@string/profile_application"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_profile_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_view_bg"
        android:clickable="true"
        android:paddingLeft="12dp">

        <ImageView
            android:id="@+id/iv_profile_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_setting" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/right_arrow"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_profile_setting"
            android:text="@string/profile_setting"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>